[gd_scene load_steps=19 format=3 uid="uid://b7b7sfgkquv5w"]

[ext_resource type="Script" path="res://Scenes/UI/main_menu.gd" id="1_4ke5f"]
[ext_resource type="PackedScene" uid="uid://0udrovh0uwjn" path="res://Scenes/game_manager.tscn" id="2_cvt01"]
[ext_resource type="PackedScene" uid="uid://bmufjv7v7pw2e" path="res://Scenes/Levels/main_menu_background.tscn" id="2_ld76y"]
[ext_resource type="FontFile" uid="uid://csf05u5hrgcdp" path="res://Resources/SuperComic-qZg62.ttf" id="2_m2bor"]
[ext_resource type="PackedScene" uid="uid://cpcb18xsmydxv" path="res://Scenes/Networking/game_manager_multiplayer.tscn" id="3_mim4p"]
[ext_resource type="Texture2D" uid="uid://fucx7sa5e162" path="res://Assets/UI_Assets/icons8-tick-box-50.png" id="4_kf0rd"]
[ext_resource type="Texture2D" uid="uid://cl1q2t1tkvgxx" path="res://Assets/UI_Assets/icons8-unchecked-checkbox-50.png" id="5_ydxd7"]
[ext_resource type="Script" path="res://Scenes/UI/resolution_option_button.gd" id="6_w3upg"]
[ext_resource type="Texture2D" uid="uid://b0nxddr4yv6f3" path="res://acm_logo.svg" id="7_1dc1f"]

[sub_resource type="LabelSettings" id="LabelSettings_jux2m"]
font = ExtResource("2_m2bor")
font_size = 120

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xhxdu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v08d7"]

[sub_resource type="Animation" id="Animation_ghtwx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_pdhfp"]
resource_name = "Title_Move"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75, 1.5, 2.25, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.1309, 0.0, -0.1309, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wbn18"]
_data = {
"RESET": SubResource("Animation_ghtwx"),
"Title_Move": SubResource("Animation_pdhfp")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_15lfe"]

[sub_resource type="LabelSettings" id="LabelSettings_qj1ma"]
font = ExtResource("2_m2bor")
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_slyrw"]
font = ExtResource("2_m2bor")
font_size = 50

[node name="MainMenu" type="Node"]
script = ExtResource("1_4ke5f")
levels = Array[PackedScene]([ExtResource("2_cvt01"), ExtResource("3_mim4p")])

[node name="mainmenubackground" parent="." instance=ExtResource("2_ld76y")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Main" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_top = NodePath("VBoxContainer/SinglePlayer")
focus_neighbor_bottom = NodePath("VBoxContainer/Multiplayer")
focus_mode = 2

[node name="Title" type="Label" parent="CanvasLayer/Main"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 262.0
offset_bottom = 483.0
grow_horizontal = 2
pivot_offset = Vector2(960, 110.5)
text = "DUNGEON
GAME"
label_settings = SubResource("LabelSettings_jux2m")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.5
offset_top = 7.5
offset_right = 224.5
offset_bottom = 212.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="SinglePlayer" type="Button" parent="CanvasLayer/Main/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_m2bor")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_xhxdu")
text = "SINGLEplayer"
flat = true

[node name="Multiplayer" type="Button" parent="CanvasLayer/Main/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_m2bor")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_v08d7")
text = "MULTIPLAYER"
flat = true

[node name="Options" type="Button" parent="CanvasLayer/Main/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_m2bor")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_v08d7")
text = "Options"
flat = true

[node name="Exit" type="Button" parent="CanvasLayer/Main/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_m2bor")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_v08d7")
text = "QUIT"
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Main"]
libraries = {
"": SubResource("AnimationLibrary_wbn18")
}
autoplay = "Title_Move"

[node name="Change_Fade" type="ColorRect" parent="CanvasLayer/Main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="Settings" type="Panel" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -709.0
offset_top = -349.0
offset_right = 709.0
offset_bottom = 351.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/Settings/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_15lfe")

[node name="Fullscreen_Select" type="HBoxContainer" parent="CanvasLayer/Settings/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Fullscreen" type="Label" parent="CanvasLayer/Settings/VBoxContainer/Fullscreen_Select"]
layout_mode = 2
text = "FULLSCREEN"
label_settings = SubResource("LabelSettings_qj1ma")

[node name="FullscreenCheck" type="CheckBox" parent="CanvasLayer/Settings/VBoxContainer/Fullscreen_Select"]
layout_direction = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("2_m2bor")
theme_override_font_sizes/font_size = 24
theme_override_icons/checked = ExtResource("4_kf0rd")
theme_override_icons/unchecked = ExtResource("5_ydxd7")
theme_override_icons/checked_disabled = ExtResource("4_kf0rd")
theme_override_icons/unchecked_disabled = ExtResource("5_ydxd7")
flat = true
alignment = 2
expand_icon = true

[node name="Window_Select" type="HBoxContainer" parent="CanvasLayer/Settings/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="WINDOW SIZE" type="Label" parent="CanvasLayer/Settings/VBoxContainer/Window_Select"]
layout_mode = 2
text = "WINDOW SIZE"
label_settings = SubResource("LabelSettings_slyrw")

[node name="OptionButton" type="OptionButton" parent="CanvasLayer/Settings/VBoxContainer/Window_Select"]
layout_mode = 2
script = ExtResource("6_w3upg")

[node name="Back_to_Main" type="Button" parent="CanvasLayer/Settings/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_m2bor")
theme_override_font_sizes/font_size = 50
text = "Back
"
flat = true

[node name="TitleCard" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/TitleCard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/TitleCard"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_1dc1f")
